<?xml version="1.0"?>
<package format="2">
  <name>fusion_estimator</name>
  <version>0.0.0</version>
  <description>sensor signal fusion estimation package</description>
  <maintainer email="blamlight0@gmail.com">Sun Minxing</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>unitree_legged_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>unitree_legged_msgs</exec_depend>


  <!-- 测试工具 -->
  <test_depend>catkin_lint</test_depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>
